--- a/exam2/package.json
+++ b/exam2/package.json
@@ -23,5 +23,7 @@
     "gulp-uglify": "^3.0.1",
     "node-sass": "^4.9.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "viewport.jquery": "^2.0.5"
+  }
 }
